syntax = "proto3";
package grpc;
option go_package= "main/app/grpc/proto/auth";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/auth/auth.proto
service AuthService {
  rpc  GetAuthVerification(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string token = 1;
}

message AuthResponse { 
  uint64 userId = 1;
  bool isAuth = 2;
  string message = 3;
}